[package]
edition      = "2021"
name         = "esp32s3-demo"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "esp32s3-demo"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3"] }
esp-hal                = { version = "=1.0.0-rc.0", features = ["esp32s3", "unstable"] }

critical-section = "1.2.0"

esp-backtrace = { version = "0.16.0", features = [
    "esp32s3",
    "panic-handler",
    "exception-handler",
    "println",
] }

esp-println = { version = "0.14.0", features = ["esp32s3", "log-04"] }
log = { version = "0.4.27" }

# WS2812 RGB LED control
smart-leds = "0.4"
heapless = "0.8"

nb = "1.1.0"
libm = "0.2.15"

nobcd = "0.2.0"

esp-hal-embassy = {version = "0.9.0", features = ["esp32s3", "log-04"]}

embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
embedded-hal = "1.0.0"

embassy-executor = "0.7.0"
embassy-futures = "0.1.1"
embassy-sync = "0.7.1"
embassy-time = "0.4.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[features]
publish_before = []